JEDIT 4.1 VERSION HISTORY

* Version 4.1pre5

+ Syntax Highlighting Changes:

- Added NQC syntax highlighting (Fan Ho Yin)
- Added Ruby-HTML syntax highlighting (Eric Benoit)
- Added Pike syntax highlighting (Marco Gotze)
- Updated C-Sharp syntax highlighting (Ollie Rutherfurd)
- Updated Perl syntax highlighting (Chris Petersen)
- Updated PL-SQL syntax highlighting (Steve Snider)
- Updated CSS syntax highlighting (Axel Biernat)
- The "More accurate syntax highlighting" option is no longer. When it
  was on, it would do the following:

  - Cause the buffer to be parsed entirely by the syntax engine when
    first loaded.
  - When parsing a line for syntax tokens, it would scan back to the
    start of the buffer looking for a line with valid syntax info,
    instead of only looking 100 lines back.

  However, the second made the first unnecessary, and with the first
  behavior gone, the performance hit is not noticable.

+ Global Options Dialog Changes:

- The tool bar option pane now has an "Edit" button for modifying the
  currently selected tool bar entry.
- Now org.gjt.sp.jedit.gui.OptionsDialog is an abstract class, with a
  concrete org.gjt.sp.jedit.options.GlobalOptions subclass with the
  Global Options-specific code. This allows plugins to create paned
  dialog boxes similar to Global Options.
- The "Standard go to next/previous word behavior" setting has been
  removed; instead some new actions have been added which can be bound
  to C+LEFT, C+RIGHT, CS+LEFT and CS+RIGHT to achieve the behavior of
  this setting:

  Go to Next Word (Eats Whitespace)
  Go to Previous Word (Eats Whitespace)
  Select Next Word (Eats Whitespace)
  Select Previous Word (Eats Whitespace)

+ Plugin Manager Changes:

- Added "Select All" button to Install and Update Plugins dialogs
- The plugin list is only downloaded once per Plugin Manager dialog box
  instance

+ Miscellaneous Changes:

- Added an "Unsplit Current" command, bound to C+0 by default. It